Adding new project, meta description and small about change

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
       gtag("config", "G-9BCNM94GD4");
     </script>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Tom Archer's web development portfolio, featuring project examples and contact information."
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Google Fonts - Start -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
